--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="register">register</string>
     <string name="resend">resend</string>
+    <string name="intro3">Hello Dear 'name'</string>
+    <string name="intro32">By playing this video, you will become
+more familiar with the features of this
+application.</string>
 </resources>
