--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="forgot_password"><u>forgot password</u> </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="what_is_iqol">1.Whats IQOL?</string>
+    <string name="question_one">Lorem Ipsum is simply dummy text of
+the printing and typesetting industry.
+Lorem Ipsum has been the
+industry's standard dummy text ever
+since the 1500s, when an unknown.</string>
 </resources>
